--- a/template/my_component/frontend/public/index.html
+++ b/template/my_component/frontend/public/index.html
@@ -7,6 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Streamlit Component" />
     <link rel="stylesheet" href="bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="../node_modules/literallycanvas/lib/css/literallycanvas.css"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
