Fixes for build to match prior

--- a/template/my_component/frontend/index.html
+++ b/template/my_component/frontend/index.html
@@ -1,33 +1,26 @@
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <style>
-    /* Set box-sizing */
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-    }
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Streamlit Component</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Streamlit Component" />
+    <link rel="stylesheet" href="/bootstrap.min.css" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-        "Segoe UI Symbol";
-      line-height: 1.5;
-      min-height: 100vh;
-      background-color: #fff;
-      color: #333;
-    }
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    /* Ensure form elements inherit font */
-    button,
-    input,
-    select,
-    textarea {
-      font: inherit;
-    }
-  </style>
-
-  <script type="module" src="/src/index.tsx"></script>
-</body>
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
+</html>
